# lora_link_layer

./: .gitignore  CMakeLists.txt  Doxyfile  sdkconfig.defaults  test_build_log.txt
.github/: copilot-instructions.md
.github/workflows/: docs.yml
components/lora_radio/: CMakeLists.txt  Kconfig  LICENSE  README.md  README.rst  idf_component.yml
components/lora_radio/examples/receiver/: CMakeLists.txt  README.md  sdkconfig.defaults
components/lora_radio/examples/sender/: CMakeLists.txt  README.md  sdkconfig.defaults
components/lora_radio/include/: esp_hal_s3.hpp  lora_radio.hpp  radio_backend.hpp  sx1278_backend.hpp
components/lora_radio/src/: esp_hal_s3.cpp  lora_radio.cpp
docs/: README.md  conf_common.py  requirements.txt  sphinx-known-warnings.txt
docs/doxygen/: Doxyfile
docs/en/: conf.py  index.rst  overview.rst
docs/en/api-reference/: lora_radio.rst
examples/receiver/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/receiver/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/sender/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/sender/main/: idf_component.yml  main.cpp
main/: CMakeLists.txt  Kconfig  idf_component.yml
main/include/: esp_hal_s3.hpp  lora_radio.hpp
main/src/: esp_hal_s3.cpp  lora_radio.cpp  main.cpp
test/: CMakeLists.txt  sdkconfig.defaults
test/main/: CMakeLists.txt  test_hardware_integration.cpp  test_neighbor_table.cpp  test_packet_building.cpp  test_runner.cpp  test_send_validation.cpp  test_state_machine.cpp
test/main/mock/: mock_radio_backend.hpp
tools/: build-docs.ps1
(+4 files in other folders)
